# SampleOpenCV

./: CMakeLists.txt  README.md  sampleOpenCV.cpp
